--- a/package.json
+++ b/package.json
@@ -4,19 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "devStart": "nodemon server.ts",
-    "start": "nodemon server.ts",
-    "build": "nodemon server.ts"
+    "devStart": "nodemon src/server.ts",
+    "start": "nodemon src/server.ts",
+    "build": "nodemon src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/socket.io": "^3.0.2",
     "axios": "^1.4.0",
+    "bson": "^5.4.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "moment": "^2.29.4",
+    "mongoose": "^7.3.4",
+    "slugify": "^1.6.6",
     "socket.io": "^4.7.1"
   },
   "devDependencies": {
