--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "moment": "^2.29.4",
     "mongoose": "^7.3.4",
+    "nodemailer": "^6.9.5",
     "slugify": "^1.6.6",
     "socket.io": "^4.7.2"
   },
