--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "back",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
     "devStart": "nodemon src/server.ts",
     "start": "nodemon src/server.ts",
-    "build": "nodemon src/server.ts"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
