--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "type": "module",
   "scripts": {
     "devStart": "nodemon src/server.ts",
     "start": "nodemon src/server.ts",
@@ -27,8 +26,11 @@
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.1",
+    "@types/express": "^4.17.20",
+    "@types/nodemailer": "^6.4.13",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.2.2"
   }
 }
