--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@types/socket.io": "^3.0.2",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.1",
     "bson": "^5.4.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.9",
